fixed responsiveness on all sections except homepage, moved navbar to bottom on mobile

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,23 +1,22 @@
-$primary: #45A28E;
-$secondary: #66FCF1;
-$textcolor:  #c5c6c7;
-$background: #1F2833;
-$background_secondary: #1A1D26;
+$primary: #45a28e;
+$secondary: #66fcf1;
+$textcolor: #c5c6c7;
+$background: #1f2833;
+$background_secondary: #1a1d26;
 
 html {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  width: 100vw;
-  background-color: $background;
-  overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: $background;
+    overflow-x: hidden;
 }
 
 .app {
-  display: flex;
+    display: flex;
 }
-
