--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -4,9 +4,11 @@ nav {
     justify-content: center;
     align-items: center;
     background: #1A1D26;
-    min-width: 7%;
+    width: 7%;
+    min-width: 80px;
     height: 100vh;
     position: fixed;
+    z-index: 1;
 
     .link {
         display: flex;
@@ -32,8 +34,17 @@ nav {
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
     nav {
-        min-width: 4rem;
+        flex-direction: row;
+        bottom: 0;
+        left: 0;
+        width: 100vw;
+        height: 9vh;
+        // max-height: 60px;
+
+        .link {
+            width: 20%;
+        }
     }
 }
